--- a/io.github.ja2_stracciatella.JA2-Stracciatella.yaml
+++ b/io.github.ja2_stracciatella.JA2-Stracciatella.yaml
@@ -46,20 +46,27 @@ modules:
       - /share/doc
       - /lib/cmake
       - /lib/pkgconfig
+  # FLTK needs glu for its wayland backend
+  - shared-modules/glu/glu-9.json
   - name: fltk
     buildsystem: cmake-ninja
     config-opts:
-      - "-DOPTION_BUILD_SHARED_LIBS=ON"
-      - "-DOPTION_BUILD_HTML_DOCUMENTATION=OFF"
+      - "-DFLTK_USE_WAYLAND=ON" # Make sure we get wayland support
+      - "-DFLTK_BUILD_FLUID=ON" # JA2 needs fluid to find Fltk
+      - "-DFLTK_BUILD_SHARED_LIBS=ON"
+      - "-DFLTK_BUILD_HTML_DOCS=OFF"
+      - "-DFLTK_BUILD_PDF_DOCS=OFF"
+      - "-DFLTK_BUILD_TEST=OFF"
+      - "-DFLTK_BUILD_EXAMPLES=OFF"
+      - "-DFLTK_BUILD_FLTK_OPTIONS=OFF"
       - "-Wno-dev"
     sources:
       - type: git
         url: https://github.com/fltk/fltk.git
-        tag: "release-1.3.11"
-        commit: "702172a951a2bb4f25afe31008ef3fcbb5bfb92f"
+        tag: "release-1.4.4"
+        commit: "9c70ea95a176933ffd575022d145c284d1fc9ef7"
     cleanup:
-      - /bin/fluid
-      - /bin/fltk-config
+      - /bin/
       - /include
       - /man
       - /share/doc
